--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ footer
 配色理由
 
 明るい印象のオレンジをアクセントカラーにし。
-ベースカラーは白だと味気ないので薄い水色に。
+ベースカラーは白だと味気ないので薄い水色に。(青系は爽やかな印象もあると思うので)
 サブカラーはベースカラーをこくした青を使いました、(暗すぎる青(紺)だと重い印象になりそうなのでそこまで濃くない青にしました。)
 
 
